[package]
name = "hellquotes-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
poise = "0.5.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
configparser = "3.0.2"
tokio = { version = "1.26.0", features = ["signal"] }
once_cell = "1.17.1"
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["rustls-tls"], default-features = false }
async-shutdown = "0.1.2"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }

[profile.release]
lto = true

[profile.profile]
inherits = "release"
debug = true
